--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My profile</title>
-    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="http://localhost/index.html">home</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <h1>Naam: Peter Jan Treur</h1> 
+        <nav>
+          <ul>
+            <li>
+              <a href="http://localhost/profile.html">profiel</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    <h1>Naam: wullempie</h1>
     <h2>Leeftijd: 17 jaar</h2>     
     <h2>Woonplaats: Arnemuiden, bij mijn ouders</h2>
     <h2>Vooropleiding(en) + profiel: HAVO (NT-profiel)</h2>
@@ -25,4 +24,10 @@
         In de 3de klas heb ik een paar studiekeuzetesten gedaan. in de 4de en 5de klas webbinars en open dagen bezocht. de webbinars waren van ICT op het HZ en avans hogeschool. de opendagen waren ook op het HZ bij de ICT en technische bedrijfskunde.
     </p>
   </body>
+  <main>
+    <article>
+       
+
+    </article>
+  </main>
 </html>
