--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My profile</title>
+    <title>Home</title>
   </head>
   <body>
     <header>
         <nav>
           <ul>
             <li>
-              <a href="http://localhost/profile.html">profiel</a>
+              <p><a href="http://localhost/profile.html">profiel</a></p>
+              <p><a href="http://localhost/dashboard.html">dashboard</a></p>
+              <p><a href="http://localhost/blog.html">blog</a></p>
+              <p><a href="http://localhost/faq.html">faq</a></p>
             </li>
           </ul>
         </nav>
