--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,10 @@
       <nav>
         <ul>
           <li>
-            <a href="http://localhost/index.html">home</a>
+            <p><a href="http://localhost/index.html">home</a></p>
+            <p><a href="http://localhost/dashboard.html">dashboard</a></p>
+            <p><a href="http://localhost/blog.html">blog</a></p>
+            <p><a href="http://localhost/faq.html">faq</a></p>
           </li>
         </ul>
       </nav>
