--- a/blog.html
+++ b/blog.html
@@ -3,17 +3,21 @@
     
 </html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Blog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <nav>
+        <!-- <nav>
           <ul>
-            <li><p><a href="http://localhost/index.html">home</a></p></li>
-            <li><p><a href="http://localhost/profile.html">profiel</a></p></li>
-            <li><p><a href="http://localhost/dashboard.html">dashboard</a></p></li>
-            <li><p><a href="http://localhost/faq.html">faq</a></p></li>
+            <li><a href="http://localhost/index.html">home</a></li>
+            <li><a href="http://localhost/profile.html">profiel</a></li>
+            <li><a href="http://localhost/dashboard.html">dashboard</a></li>
+            <li><a href="http://localhost/faq.html">faq</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </header>
 </body>
