--- a/faq.html
+++ b/faq.html
@@ -3,18 +3,20 @@
 
 </html>
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>FAQ</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
           <ul>
-            <li>
-              <a href="http://localhost/index.html">home</a>
-              <a href="http://localhost/profile.html">profiel</a>
-              <a href="http://localhost/blog.html">blog</a>
-              <a href="http://localhost/faq.html">faq</a>
-            </li>
+            <li><a href="http://localhost/index.html">home</a></li>
+            <li><a href="http://localhost/profile.html">profiel</a></li>
+            <li><a href="http://localhost/blog.html">blog</a></li>
+            <li><a href="http://localhost/faq.html">faq</a></li>
           </ul>
         </nav>
       </header>
