--- a/profile.html
+++ b/profile.html
@@ -11,21 +11,12 @@
     <header>
       <nav>
         <ul>
-          <li>
-            <p><a href="http://localhost/index.html">home</a></p>
-            <p><a href="http://localhost/dashboard.html">dashboard</a></p>
-            <p><a href="http://localhost/blog.html">blog</a></p>
-            <p><a href="http://localhost/faq.html">faq</a></p>
-          </li>
+            <li><a href="http://localhost/index.html">home</a></li>
+            <li><a href="http://localhost/dashboard.html">dashboard</a></li>
+            <li><a href="http://localhost/blog.html">blog</a></li>
+            <li><a href="http://localhost/faq.html">faq</a></li>
         </ul>
       </nav>
     </header>
-    <h1>Naam: Peter Jan Treur</h1> 
-    <h2>Leeftijd: 17 jaar</h2>     
-    <h2>Woonplaats: Arnemuiden, bij mijn ouders</h2>
-    <h2>Vooropleiding(en) + profiel: HAVO (NT-profiel)</h2>
-    <p>Welke studiekeuzeactiviteiten heb je uitgevoerd? denk aan: bezoeken van open dagen, meeloopdagen etc.
-        In de 3de klas heb ik een paar studiekeuzetesten gedaan. in de 4de en 5de klas webbinars en open dagen bezocht. de webbinars waren van ICT op het HZ en avans hogeschool. de opendagen waren ook op het HZ bij de ICT en technische bedrijfskunde.
-    </p>
   </body>
 </html>
