--- a/faq.html
+++ b/faq.html
@@ -10,14 +10,14 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-          <ul>
-            <li><a href="http://localhost/index.html">home</a></li>
-            <li><a href="http://localhost/profile.html">profiel</a></li>
-            <li><a href="http://localhost/blog.html">blog</a></li>
-            <li><a href="http://localhost/faq.html">faq</a></li>
-          </ul>
-        </nav>
-      </header>
+    <h1>
+        <table>
+          <tr>
+            <th><a href="http://localhost/index.html">Home</a></th>
+            <th><a href="http://localhost/profile.html">Profiel</a></th>
+            <th><a href="http://localhost/dashboard.html">Dashboard</a></th>
+            <th><a href="http://localhost/blog.html">Blog</a></th>
+          </tr>
+        </table>
+    </h1>
 </body>
