--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>
       <table>
         <tr>
+          <th style="background-color: rgb(47, 48, 117);"><a href="http://localhost/index.html">Home</a></th>
           <th><a href="http://localhost/profile.html">Profiel</a></th>
           <th><a href="http://localhost/dashboard.html">Dashboard</a></th>
           <th><a href="http://localhost/blog.html">Blog</a></th>
