--- a/profile.html
+++ b/profile.html
@@ -12,6 +12,7 @@
       <table>
         <tr>
           <th><a href="http://localhost/index.html">Home</a></th>
+          <th style="background-color: rgb(47, 48, 117);"><a href="http://localhost/profile.html">Profiel</a></th>
           <th><a href="http://localhost/dashboard.html">Dashboard</a></th>
           <th><a href="http://localhost/blog.html">Blog</a></th>
           <th><a href="http://localhost/faq.html">FAQ</a></th>
