--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My profile</title>
     <link rel="stylesheet" href="styles.css">
+    
   </head>
   <body>
     <h1>
@@ -19,5 +20,16 @@
         </tr>
       </table>
     </h1>
+    <hr>
+    <h2 >
+      <ul>
+        <li>dsfafdafsdf</li>
+        <li>Naam: Pieter Jan Treur</li>
+        <li>Basketbal <img src="/images/3349343.png" alt="Basketbal icon" height="2%" width="2%" ></li>
+        <li>Fietsen</li>
+        <li>Gamen <img src="/images/Video_game_controller_icon_designed_by_Maico_Amorim.svg.png" alt="controller icon" height="2%" width="2%"></li>
+      </ul>
+    </h2>
   </body>
 </html>
+/* 1 image or video, 1 ordered or unordered list of characteristics of yourself*/
