--- a/profile.html
+++ b/profile.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My profile</title>
-    <link rel="stylesheet" href="styles.css">
-    
-  </head>
-  <body>
-    <h1>
-      <table>
-        <tr>
-          <th><a href="http://localhost/index.html">Home</a></th>
-          <th style="background-color: rgb(47, 48, 117);"><a href="http://localhost/profile.html">Profiel</a></th>
-          <th><a href="http://localhost/dashboard.html">Dashboard</a></th>
-          <th><a href="http://localhost/blog.html">Blog</a></th>
-          <th><a href="http://localhost/faq.html">FAQ</a></th>
-        </tr>
-      </table>
-    </h1>
-    <hr>
-    <h2 >
-      <ul>
-        <li>dsfafdafsdf</li>
-        <li>Naam: Pieter Jan Treur</li>
-        <li>Basketbal <img src="/images/3349343.png" alt="Basketbal icon" height="2%" width="2%" ></li>
-        <li>Fietsen</li>
-        <li>Gamen <img src="/images/Video_game_controller_icon_designed_by_Maico_Amorim.svg.png" alt="controller icon" height="2%" width="2%"></li>
-      </ul>
-    </h2>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>My profile</title>
+  <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+  <h1>
+    <table>
+      <tr>
+        <th><a href="http://localhost/index.html">Home</a></th>
+        <th style="background-color: rgb(47, 48, 117);"><a href="http://localhost/profile.html">Profiel</a></th>
+        <th><a href="http://localhost/dashboard.html">Dashboard</a></th>
+        <th><a href="http://localhost/blog.html">Blog</a></th>
+        <th><a href="http://localhost/faq.html">FAQ</a></th>
+      </tr>
+    </table>
+  </h1>
+  <hr>
+  <h2>
+    <ul>
+      <li>Naam: Pieter Jan Treur</li>
+      <li>Woonplaats: Arnemuiden</li>
+      <li>Basketbal <img class="inline-icon" src="images/3349343.png" alt="Basketbal_icon"></li>
+      <li>Fietsen</li>
+      <li>Gamen <img class="inline-icon" src="images/Video_game_controller_icon_designed_by_Maico_Amorim.svg.png"
+          alt="controller_icon"></li>
+    </ul>
+    <img src="images/WIN_20230908_10_08_39_Pro.jpg" alt="HZ-pas">
+  </h2>
+</body>
+
 </html>
 /* 1 image or video, 1 ordered or unordered list of characteristics of yourself*/
+/* naam van fotos inkorten*/
