--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dashboard</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="dashboard.css">
 </head>
 
 <body>
@@ -23,4 +24,83 @@
       </tr>
     </table>
   </h1>
+  <hr>
+  <table class="program-progress">
+    <tr>
+      <th>Quartile</th>
+      <th>Course</th>
+      <th>EC</th>
+      <th>Exam</th>
+      <th>Grade</th>
+    </tr>
+    <tr>
+      <td rowspan="3">1</td>
+      <td>CU75001</td>
+      <td>2,5</td>
+      <td>Assessment website</td>
+      <td>e</td>
+    </tr>
+    <tr>
+      <td>CU75002</td>
+      <td>5</td>
+      <td>Written exam</td>
+      <td>d</td>
+    </tr>
+    <tr>
+      <td>CU75003</td>
+      <td>5</td>
+      <td>Case study exam</td>
+      <td>d</td>
+    </tr>
+    <tr>
+      <td rowspan="2">2</td>
+      <td rowspan="2">CU75004</td>
+      <td rowspan="2">10</td>
+      <td>Group assignment</td>
+      <td>e</td>
+    </tr>
+    <tr>
+      <td>Case study exam</td>
+      <td>b</td>
+    </tr>
+    <tr>
+      <td rowspan="4">3</td>
+      <td rowspan="4">CU75080</td>
+      <td rowspan="4">10</td>
+      <td>On-site case study exam</td>
+      <td>e</td>
+    </tr>
+    <tr>
+      <td>Database exam</td>
+      <td>ac</td>
+    </tr>
+    <tr>
+      <td>Group presentation on project result</td>
+      <td>bc</td>
+    </tr>
+    <tr>
+      <td>Group portfolio with individual elements on requirements</td>
+      <td>cc</td>
+    </tr>
+    <tr>
+      <td rowspan="3">4</td>
+      <td>CU75081</td>
+      <td>2,5</td>
+      <td>Final delivery</td>
+      <td>e</td>
+    </tr>
+    <tr>
+      <td>CU75011</td>
+      <td>10</td>
+      <td>Report of acceptance tests and optional assessments</td>
+      <td>d</td>
+    </tr>
+    <tr>
+      <td>CU75068</td>
+      <td>12,5</td>
+      <td>IT Developement portfolio</td>
+      <td>d</td>
+    </tr>
+
+  </table>
 </body>
