--- a/dashboard.html
+++ b/dashboard.html
@@ -101,6 +101,9 @@
       <td>IT Developement portfolio</td>
       <td>d</td>
     </tr>
-
   </table>
+  <hr>
+  <label for="file">EC Progress:</label>
+
+  <progress id="file" max="60" value="0">70%</progress>
 </body>
