--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dashboard</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="dashboard.css">
+  <link rel="stylesheet" href="tablestyles.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       <tr>
         <th><a href="http://localhost/index.html">Home</a></th>
         <th><a href="http://localhost/profile.html">Profiel</a></th>
-        <th style="background-color: rgb(47, 48, 117);"><a href="http://localhost/dashboard.html">Dashboard</a></th>
+        <th style="background-color: #03254c;"><a href="http://localhost/dashboard.html">Dashboard</a></th>
         <th><a href="http://localhost/blog.html">Blog</a></th>
         <th><a href="http://localhost/faq.html">FAQ</a></th>
       </tr>
