--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,7 @@
         <th><a href="http://localhost/profile.html">Profiel</a></th>
         <th><a href="http://localhost/dashboard.html">Dashboard</a></th>
         <th><a href="http://localhost/blog.html">Blog</a></th>
-        <th style="background-color: rgb(47, 48, 117);"><a href="http://localhost/faq.html">FAQ</a></th>
+        <th style="background-color: #03254c;"><a href="http://localhost/faq.html">FAQ</a></th>
       </tr>
     </table>
   </h1>
