--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
     <table>
       <tr>
         <th><a href="http://localhost/index.html">Home</a></th>
-        <th style="background-color: rgb(47, 48, 117);"><a href="http://localhost/profile.html">Profiel</a></th>
+        <th style="background-color: #03254c;"><a href="http://localhost/profile.html">Profiel</a></th>
         <th><a href="http://localhost/dashboard.html">Dashboard</a></th>
         <th><a href="http://localhost/blog.html">Blog</a></th>
         <th><a href="http://localhost/faq.html">FAQ</a></th>
@@ -27,9 +27,9 @@
     <ul>
       <li>Naam: Pieter Jan Treur</li>
       <li>Woonplaats: Arnemuiden</li>
-      <li>Basketbal <img class="inline-icon" src="images/3349343.png" alt="Basketbal_icon"></li>
+      <li>Basketbal <img class="inline-icon" src="images/basketball_icon.png" alt="Basketbal_icon"></li>
       <li>Fietsen</li>
-      <li>Gamen <img class="inline-icon" src="images/Video_game_controller_icon_designed_by_Maico_Amorim.svg.png"
+      <li>Gamen <img class="inline-icon" src="images/videogame-controller.png"
           alt="controller_icon"></li>
     </ul>
     <img src="images/WIN_20230908_10_08_39_Pro.jpg" alt="HZ-pas">
