--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <!-- <img class="index-bg" src="images/shutterstock_535124956-scaled.jpg" alt="index-background"> -->
   </h1>
   <hr>
-  <h2 class="home-title">Portfolio website</h2>
+  <h2 class="home-title">HBO-ICT</h2>
+  <table>
+    <tr>
+      <th></th>
+    </tr>
+  </table>
   <table class="motivatie">
     <tr>
       <th>Motivatie:</th>
