--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
     </table>
   </h1>
   <hr>
-  <h2>
+  <h2 class="profile-content">
     <ul>
       <li>Naam: Pieter Jan Treur</li>
       <li>Woonplaats: Arnemuiden</li>
@@ -32,10 +32,9 @@
       <li>Gamen <img class="inline-icon" src="images/videogame-controller.png"
           alt="controller_icon"></li>
     </ul>
-    <img src="images/WIN_20230908_10_08_39_Pro.jpg" alt="HZ-pas">
+    <img src="images/face.JPG" alt="gezicht">
   </h2>
 </body>
 
 </html>
 /* 1 image or video, 1 ordered or unordered list of characteristics of yourself*/
-/* naam van fotos inkorten*/
