--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>FAQ</title>
   <link href="styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="faqtable.css">
 </head>
 
 <body>
@@ -23,4 +24,37 @@
       </tr>
     </table>
   </h1>
+  <hr>
+  <table class="faq-data">
+    <tr>
+      <th>1. How can you print a document from your laptop at HZ?</th>
+    </tr>
+    <tr>
+      <td>Answ: Connect to the printer and print your document.</td>
+    </tr>
+    <tr>
+      <th>2. How can you scan a document and send it to your laptop at HZ?</th>
+    </tr>
+    <tr>
+      <td>Answ: Go to a printer, scan your HZ-pass and scan the document. the scan will automatically be sent to your e-mail.</td>
+    </tr>
+    <tr>
+      <th>3. How can I buy something (like when I sign up for the IT introduction event) on the HZ web shop?</th>
+    </tr>
+    <tr>
+      <td>Answ: Sign in to your HZ account. Either go to webshop.hz.nl or go to the webshop by using
+         the hz portal. once on the webshop choose your item of choice. fill everything in as required
+          and go to checkout where youll have to choose your payment method and check out.</td>
+    </tr>
+    <tr>
+      <th>4. How can you book a project space in one of the wings? </th>
+    </tr>
+    <tr>
+      <td>Answ: From the HZ portal go to the Selfservice portal, go to "Make a reservation", go to
+         "Reserve meeting room or project group room", go to "reserve a room", there youll see every
+          available moment to reserve a room. </td>
+    </tr>
+    <tr><th>5. What are the instructions if you want to park your car at the HZ parking lot?</th></tr>
+    <tr><td>Answ: Park it in the parking lot of the AH.</td></tr>
+  </table>
 </body>
