--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
          werkt. dat is ook wat het voor mij een leuk vak maakt.</td>
     </tr>
   </table>
+  <hr>
+  <p class="hz-logo"><img src="images/hz-university-of-applied-sciences-logo.png" alt="hz-logo"></p>
     <!-- <h2 class="motivatie">Motivatie:<br>
       Deze studie heb ik gekozen omdat deze het beste bij mij leek te passen. Tijdens mijn middelbare
        schooltijd vond ik dingen maken altijd wel leuk, maar was tekenen of kunst niet mijn ding. ICT
