--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <h1>
     <table>
       <tr>
-        <th style="background-color: #03254c;"><a href="http://localhost/index.html">Home</a></th>
-        <th><a href="http://localhost/profile.html">Profiel</a></th>
-        <th><a href="http://localhost/dashboard.html">Dashboard</a></th>
-        <th><a href="http://localhost/blog.html">Blog</a></th>
-        <th><a href="http://localhost/faq.html">FAQ</a></th>
+        <th style="background-color: #03254c;"><a class="navbar" href="http://localhost/index.html">Home</a></th>
+        <th><a class="navbar" href="http://localhost/profile.html">Profiel</a></th>
+        <th><a class="navbar" href="http://localhost/dashboard.html">Dashboard</a></th>
+        <th><a class="navbar" href="http://localhost/blog.html">Blog</a></th>
+        <th><a class="navbar" href="http://localhost/faq.html">FAQ</a></th>
       </tr>
     </table>
     <!-- <img class="index-bg" src="images/shutterstock_535124956-scaled.jpg" alt="index-background"> -->
@@ -29,6 +29,10 @@
     <tr>
       <th></th>
     </tr>
+  </table>
+  <table class="welkom" style="float: left;">
+    <tr><th>Welkom</th></tr>
+    <tr><td>Deze website is mijn creatie en dient als mijn portfolio. op mijn profielpagina staat wat info over mij en voor extra informatie kan u naar mijn Instagrampagina <a class="insta" href="https://instagram.com/pieterjan_treur?igshid=NzZlODBkYWE4Ng==">hier</a> gaan.</td></tr>
   </table>
   <table class="motivatie">
     <tr>
@@ -42,7 +46,7 @@
     </tr>
   </table>
   <hr>
-  <p class="hz-logo"><img src="images/hz-university-of-applied-sciences-logo.png" alt="hz-logo"></p>
+  <p><img src="images/hz-university-of-applied-sciences-logo.png" alt="hz-logo"></p>
     <!-- <h2 class="motivatie">Motivatie:<br>
       Deze studie heb ik gekozen omdat deze het beste bij mij leek te passen. Tijdens mijn middelbare
        schooltijd vond ik dingen maken altijd wel leuk, maar was tekenen of kunst niet mijn ding. ICT
