--- a/dashboard.html
+++ b/dashboard.html
@@ -16,11 +16,11 @@
   <h1>
     <table>
       <tr>
-        <th><a href="http://localhost/index.html">Home</a></th>
-        <th><a href="http://localhost/profile.html">Profiel</a></th>
-        <th style="background-color: #03254c;"><a href="http://localhost/dashboard.html">Dashboard</a></th>
-        <th><a href="http://localhost/blog.html">Blog</a></th>
-        <th><a href="http://localhost/faq.html">FAQ</a></th>
+        <th><a class="navbar" href="http://localhost/index.html">Home</a></th>
+        <th><a class="navbar" href="http://localhost/profile.html">Profiel</a></th>
+        <th style="background-color: #03254c;"><a class="navbar" href="http://localhost/dashboard.html">Dashboard</a></th>
+        <th><a class="navbar" href="http://localhost/blog.html">Blog</a></th>
+        <th><a class="navbar" href="http://localhost/faq.html">FAQ</a></th>
       </tr>
     </table>
   </h1>
