--- a/profile.html
+++ b/profile.html
@@ -14,11 +14,11 @@
   <h1>
     <table>
       <tr>
-        <th><a href="http://localhost/index.html">Home</a></th>
-        <th style="background-color: #03254c;"><a href="http://localhost/profile.html">Profiel</a></th>
-        <th><a href="http://localhost/dashboard.html">Dashboard</a></th>
-        <th><a href="http://localhost/blog.html">Blog</a></th>
-        <th><a href="http://localhost/faq.html">FAQ</a></th>
+        <th><a class="navbar" href="http://localhost/index.html">Home</a></th>
+        <th style="background-color: #03254c;"><a class="navbar" href="http://localhost/profile.html">Profiel</a></th>
+        <th><a class="navbar" href="http://localhost/dashboard.html">Dashboard</a></th>
+        <th><a class="navbar" href="http://localhost/blog.html">Blog</a></th>
+        <th><a class="navbar" href="http://localhost/faq.html">FAQ</a></th>
       </tr>
     </table>
   </h1>
@@ -27,6 +27,7 @@
     <ul>
       <li>Naam: Pieter Jan Treur</li>
       <li>Woonplaats: Arnemuiden</li>
+      <li>Hobby's:</li>
       <li>Basketbal <img class="inline-icon" src="images/basketball_icon.png" alt="Basketbal_icon"></li>
       <li>Fietsen</li>
       <li>Gamen <img class="inline-icon" src="images/videogame-controller.png"
