--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
   <link rel="stylesheet" href="tablestyles.css">
 </head>
 
-<body class="index-body">
+<body class="bodyBackground">
   <h1>
     <table>
       <tr>
-        <th style="background-color: #03254c;"><a class="navbar" href="http://localhost/index.html">Home</a></th>
+    <th style="background-color: #1167b1;"><a class="navbar" href="http://localhost/index.html">Home</a></th>
         <th><a class="navbar" href="http://localhost/profile.html">Profiel</a></th>
         <th><a class="navbar" href="http://localhost/dashboard.html">Dashboard</a></th>
         <th><a class="navbar" href="http://localhost/blog.html">Blog</a></th>
         <th><a class="navbar" href="http://localhost/faq.html">FAQ</a></th>
       </tr>
     </table>
-    <!-- <img class="index-bg" src="images/shutterstock_535124956-scaled.jpg" alt="index-background"> -->
   </h1>
   <hr>
   <h2 class="home-title">HBO-ICT</h2>
@@ -30,7 +29,7 @@
       <th></th>
     </tr>
   </table>
-  <table class="welkom" style="float: left;">
+  <table class="welkom">
     <tr><th>Welkom</th></tr>
     <tr><td>Deze website is mijn creatie en dient als mijn portfolio. op mijn profielpagina staat wat info over mij en voor extra informatie kan u naar mijn Instagrampagina <a class="insta" href="https://instagram.com/pieterjan_treur?igshid=NzZlODBkYWE4Ng==">hier</a> gaan.</td></tr>
   </table>
