--- a/profile.html
+++ b/profile.html
@@ -10,12 +10,12 @@
 
 </head>
 
-<body>
+<body class="bodyBackground">
   <h1>
     <table>
       <tr>
         <th><a class="navbar" href="http://localhost/index.html">Home</a></th>
-        <th style="background-color: #03254c;"><a class="navbar" href="http://localhost/profile.html">Profiel</a></th>
+        <th style="background-color: #1167b1;"><a class="navbar" href="http://localhost/profile.html">Profiel</a></th>
         <th><a class="navbar" href="http://localhost/dashboard.html">Dashboard</a></th>
         <th><a class="navbar" href="http://localhost/blog.html">Blog</a></th>
         <th><a class="navbar" href="http://localhost/faq.html">FAQ</a></th>
