--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="faqtable.css">
 </head>
 
-<body>
+<body class="bodyBackground">
   <h1>
     <table>
       <tr>
@@ -20,7 +20,7 @@
         <th><a class="navbar" href="http://localhost/profile.html">Profiel</a></th>
         <th><a class="navbar" href="http://localhost/dashboard.html">Dashboard</a></th>
         <th><a class="navbar" href="http://localhost/blog.html">Blog</a></th>
-        <th style="background-color: #03254c;"><a class="navbar" href="http://localhost/faq.html">FAQ</a></th>
+        <th style="background-color: #1167b1;"><a class="navbar" href="http://localhost/faq.html">FAQ</a></th>
       </tr>
     </table>
   </h1>
