--- a/faq.html
+++ b/faq.html
@@ -26,9 +26,14 @@
           <button onclick="myFunction()" class="dropbtn">Links</button>
           <div id="myDropdown" class="dropdown-content">
             <a href="https://hz.nl/over-de-hz/organisatie/regelingen-documenten">Studie en examenregelingen</a>
-            <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementatie regulaties</a>
-            <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#bb3e11e764ef4f7ca866e2c2b2aa34a7">Opdracht specificaties</a>
-            <a href="https://teams.microsoft.com/_?culture=nl-nl&country=nl#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">
+            <a
+              href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementatie
+              regulaties</a>
+            <a
+              href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#bb3e11e764ef4f7ca866e2c2b2aa34a7">Opdracht
+              specificaties</a>
+            <a
+              href="https://teams.microsoft.com/_?culture=nl-nl&country=nl#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">
               Teamsomgeving
             </a>
             <a href="https://hz.osiris-student.nl/#/voortgang/">Studievoortgang</a>
@@ -50,25 +55,30 @@
       <th>2. How can you scan a document and send it to your laptop at HZ?</th>
     </tr>
     <tr>
-      <td>Answ: Go to a printer, scan your HZ-pass and scan the document. the scan will automatically be sent to your e-mail.</td>
+      <td>Answ: Go to a printer, scan your HZ-pass and scan the document. the scan will automatically be sent to your
+        e-mail.</td>
     </tr>
     <tr>
       <th>3. How can I buy something (like when I sign up for the IT introduction event) on the HZ web shop?</th>
     </tr>
     <tr>
       <td>Answ: Sign in to your HZ account. Either go to webshop.hz.nl or go to the webshop by using
-         the hz portal. once on the webshop choose your item of choice. fill everything in as required
-          and go to checkout where youll have to choose your payment method and check out.</td>
+        the hz portal. once on the webshop choose your item of choice. fill everything in as required
+        and go to checkout where youll have to choose your payment method and check out.</td>
     </tr>
     <tr>
       <th>4. How can you book a project space in one of the wings? </th>
     </tr>
     <tr>
       <td>Answ: From the HZ portal go to the Selfservice portal, go to "Make a reservation", go to
-         "Reserve meeting room or project group room", go to "reserve a room", there youll see every
-          available moment to reserve a room. </td>
+        "Reserve meeting room or project group room", go to "reserve a room", there youll see every
+        available moment to reserve a room. </td>
     </tr>
-    <tr><th>5. What are the instructions if you want to park your car at the HZ parking lot?</th></tr>
-    <tr><td>Answ: Park it in the parking lot of the AH.</td></tr>
+    <tr>
+      <th>5. What are the instructions if you want to park your car at the HZ parking lot?</th>
+    </tr>
+    <tr>
+      <td>Answ: Park it in the parking lot of the AH.</td>
+    </tr>
   </table>
 </body>
