--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>
     <table>
       <tr>
-    <th style="background-color: #1167b1;"><a class="navbar" href="http://localhost/index.html">Home</a></th>
+        <th style="background-color: #1167b1;"><a class="navbar" href="http://localhost/index.html">Home</a></th>
         <th><a class="navbar" href="http://localhost/profile.html">Profiel</a></th>
         <th><a class="navbar" href="http://localhost/dashboard.html">Dashboard</a></th>
         <th><a class="navbar" href="http://localhost/blog.html">Blog</a></th>
@@ -24,9 +24,14 @@
           <button onclick="myFunction()" class="dropbtn">Links</button>
           <div id="myDropdown" class="dropdown-content">
             <a href="https://hz.nl/over-de-hz/organisatie/regelingen-documenten">Studie en examenregelingen</a>
-            <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementatie regulaties</a>
-            <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#bb3e11e764ef4f7ca866e2c2b2aa34a7">Opdracht specificaties</a>
-            <a href="https://teams.microsoft.com/_?culture=nl-nl&country=nl#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">
+            <a
+              href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementatie
+              regulaties</a>
+            <a
+              href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#bb3e11e764ef4f7ca866e2c2b2aa34a7">Opdracht
+              specificaties</a>
+            <a
+              href="https://teams.microsoft.com/_?culture=nl-nl&country=nl#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">
               Teamsomgeving
             </a>
             <a href="https://hz.osiris-student.nl/#/voortgang/">Studievoortgang</a>
@@ -38,8 +43,14 @@
   </h1>
   <hr>
   <table class="welkom">
-    <tr><th>Welkom</th></tr>
-    <tr><td>Deze website is mijn creatie en dient als mijn portfolio. op mijn profielpagina staat wat info over mij en voor extra informatie kan u naar mijn Instagrampagina <a class="insta" href="https://instagram.com/pieterjan_treur?igshid=NzZlODBkYWE4Ng==">hier</a> gaan.</td></tr>
+    <tr>
+      <th>Welkom</th>
+    </tr>
+    <tr>
+      <td>Deze website is mijn creatie en dient als mijn portfolio. op mijn profielpagina staat wat info over mij en
+        voor extra informatie kan u naar mijn Instagrampagina <a class="insta"
+          href="https://instagram.com/pieterjan_treur?igshid=NzZlODBkYWE4Ng==">hier</a> gaan.</td>
+    </tr>
   </table>
   <table class="motivatie">
     <tr>
@@ -48,8 +59,8 @@
     <tr>
       <td>Deze studie heb ik gekozen omdat deze het beste bij mij leek te passen. Tijdens mijn middelbare
         schooltijd vond ik dingen maken altijd wel leuk, maar was tekenen of kunst niet mijn ding. ICT
-         laat het jou helemaal zelf doen en het maakt niet uit hoe je het hebt gedaan, als het maar 
-         werkt. dat is ook wat het voor mij een leuk vak maakt.</td>
+        laat het jou helemaal zelf doen en het maakt niet uit hoe je het hebt gedaan, als het maar
+        werkt. dat is ook wat het voor mij een leuk vak maakt.</td>
     </tr>
   </table>
   <hr>
