--- a/blog.html
+++ b/blog.html
@@ -26,9 +26,14 @@
           <button onclick="myFunction()" class="dropbtn">Links</button>
           <div id="myDropdown" class="dropdown-content">
             <a href="https://hz.nl/over-de-hz/organisatie/regelingen-documenten">Studie en examenregelingen</a>
-            <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementatie regulaties</a>
-            <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#bb3e11e764ef4f7ca866e2c2b2aa34a7">Opdracht specificaties</a>
-            <a href="https://teams.microsoft.com/_?culture=nl-nl&country=nl#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">
+            <a
+              href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementatie
+              regulaties</a>
+            <a
+              href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#bb3e11e764ef4f7ca866e2c2b2aa34a7">Opdracht
+              specificaties</a>
+            <a
+              href="https://teams.microsoft.com/_?culture=nl-nl&country=nl#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">
               Teamsomgeving
             </a>
             <a href="https://hz.osiris-student.nl/#/voortgang/">Studievoortgang</a>
@@ -40,24 +45,59 @@
   </h1>
   <hr>
   <table class="blogPagina">
-    <tr><th>Studiekeuze:</th></tr>
-    <tr><td>ICT is altijd al interessant voor mij geweest, al is het gamen of computers bouwen/repareren. <br>
-      Op de middelbare school heb ik informatica gehad waarbij ik Python heb geleerd, wat ik heel leuk vond. <br>
-    Daarom wil ik later ook met dit vak brood op de plank brengen.</td></tr>  
-    <tr><th>Persoonlijke SWOT-analyse:</th></tr>
-    <tr><th>Strengths: Wat zijn je sterke punten?</th></tr>
-    <tr><td>het verzinnen van verschillende oplossingen bij bepaalde problemen.</td></tr>
-    <tr><th>Weaknesses: wat zijn je valkuilen?</th></tr>
-    <tr><td>presenteren, autisme wat sommige situaties kan beinvloeden.</td></tr>
-    <tr><th>Opportunities: Welke kansen zie je?</th></tr>
-    <tr><td>Ik hoop veel valkuilen zoals presenteren en andere als gevolg van mijn autisme weg te werken of te verminderen.</td></tr>
-    <tr><th>Threats: Welke risico's zie je?</th></tr>
-    <tr><td>als gevolg van het veel achter een pc zitten kan mijn gezondheid er aan gaan lijden. dit is hopelijk te vermijden door extra te gaan sporten in vrije tijd.</td></tr>
-    <tr><th>Programming experience:</th></tr>
-    <tr><td>Ik heb op de middelbare informatica gehad waarbij ik Python en Adruino heb geleerd. ook heb ik voor mijn profielwerkstuk een mobiele app gemaakt met Dart.</td></tr>
-    <tr><th>First feedback:</th></tr>
-    <tr><td><img src="images/first-feedback.png" alt="first-feedback"></td></tr>
-    <tr><td>De feedback heeft mij gerustgesteld</td></tr>
+    <tr>
+      <th>Studiekeuze:</th>
+    </tr>
+    <tr>
+      <td>ICT is altijd al interessant voor mij geweest, al is het gamen of computers bouwen/repareren. <br>
+        Op de middelbare school heb ik informatica gehad waarbij ik Python heb geleerd, wat ik heel leuk vond. <br>
+        Daarom wil ik later ook met dit vak brood op de plank brengen.</td>
+    </tr>
+    <tr>
+      <th>Persoonlijke SWOT-analyse:</th>
+    </tr>
+    <tr>
+      <th>Strengths: Wat zijn je sterke punten?</th>
+    </tr>
+    <tr>
+      <td>het verzinnen van verschillende oplossingen bij bepaalde problemen.</td>
+    </tr>
+    <tr>
+      <th>Weaknesses: wat zijn je valkuilen?</th>
+    </tr>
+    <tr>
+      <td>presenteren, autisme wat sommige situaties kan beinvloeden.</td>
+    </tr>
+    <tr>
+      <th>Opportunities: Welke kansen zie je?</th>
+    </tr>
+    <tr>
+      <td>Ik hoop veel valkuilen zoals presenteren en andere als gevolg van mijn autisme weg te werken of te
+        verminderen.</td>
+    </tr>
+    <tr>
+      <th>Threats: Welke risico's zie je?</th>
+    </tr>
+    <tr>
+      <td>als gevolg van het veel achter een pc zitten kan mijn gezondheid er aan gaan lijden. dit is hopelijk te
+        vermijden door extra te gaan sporten in vrije tijd.</td>
+    </tr>
+    <tr>
+      <th>Programming experience:</th>
+    </tr>
+    <tr>
+      <td>Ik heb op de middelbare informatica gehad waarbij ik Python en Adruino heb geleerd. ook heb ik voor mijn
+        profielwerkstuk een mobiele app gemaakt met Dart.</td>
+    </tr>
+    <tr>
+      <th>First feedback:</th>
+    </tr>
+    <tr>
+      <td><img src="images/first-feedback.png" alt="first-feedback"></td>
+    </tr>
+    <tr>
+      <td>De feedback heeft mij gerustgesteld</td>
+    </tr>
   </table>
   <hr>
 </body>
