--- a/profile.html
+++ b/profile.html
@@ -25,9 +25,14 @@
           <button onclick="myFunction()" class="dropbtn">Links</button>
           <div id="myDropdown" class="dropdown-content">
             <a href="https://hz.nl/over-de-hz/organisatie/regelingen-documenten">Studie en examenregelingen</a>
-            <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementatie regulaties</a>
-            <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#bb3e11e764ef4f7ca866e2c2b2aa34a7">Opdracht specificaties</a>
-            <a href="https://teams.microsoft.com/_?culture=nl-nl&country=nl#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">
+            <a
+              href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementatie
+              regulaties</a>
+            <a
+              href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#bb3e11e764ef4f7ca866e2c2b2aa34a7">Opdracht
+              specificaties</a>
+            <a
+              href="https://teams.microsoft.com/_?culture=nl-nl&country=nl#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">
               Teamsomgeving
             </a>
             <a href="https://hz.osiris-student.nl/#/voortgang/">Studievoortgang</a>
@@ -45,12 +50,10 @@
       <li>Hobby's:</li>
       <li>Basketbal <img class="inline-icon" src="images/basketball_icon.png" alt="Basketbal_icon"></li>
       <li>Fietsen</li>
-      <li>Gamen <img class="inline-icon" src="images/videogame-controller.png"
-          alt="controller_icon"></li>
+      <li>Gamen <img class="inline-icon" src="images/videogame-controller.png" alt="controller_icon"></li>
     </ul>
   </h2>
   <img src="images/face.JPG" alt="gezicht">
 </body>
 
 </html>
-
