--- a/faq.html
+++ b/faq.html
@@ -16,11 +16,11 @@
   <h1>
     <table>
       <tr>
-        <th><a class="navbar" href="http://localhost/index.html">Home</a></th>
-        <th><a class="navbar" href="http://localhost/profile.html">Profiel</a></th>
-        <th><a class="navbar" href="http://localhost/dashboard.html">Dashboard</a></th>
-        <th><a class="navbar" href="http://localhost/blog.html">Blog</a></th>
-        <th style="background-color: #1167b1;"><a class="navbar" href="http://localhost/faq.html">FAQ</a></th>
+        <th><a class="navbar" href="index.html">Home</a></th>
+        <th><a class="navbar" href="profile.html">Profiel</a></th>
+        <th><a class="navbar" href="dashboard.html">Dashboard</a></th>
+        <th><a class="navbar" href="blog.html">Blog</a></th>
+        <th style="background-color: #1167b1;"><a class="navbar" href="faq.html">FAQ</a></th>
         <script src="functionality.js"></script>
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn">Links</button>
