--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>
     <table>
       <tr>
-        <th style="background-color: #1167b1;"><a class="navbar" href="sindex.html">Home</a></th>
+        <th style="background-color: #1167b1;"><a class="navbar" href="index.html">Home</a></th>
         <th><a class="navbar" href="profile.html">Profiel</a></th>
         <th><a class="navbar" href="dashboard.html">Dashboard</a></th>
         <th><a class="navbar" href="blog.html">Blog</a></th>
