--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </tr>
   </table>
   <hr>
-  <p><img src="images/hz-university-of-applied-sciences-logo.png" alt="hz-logo"></p>
+  <p><img src="images/hz-university-of-applied-sciences-logo.png" alt="hz-logo" style="float: left;">
+  <img class="htmlLogo" src="images/htmllogo.png" alt="html-logo" style="float: right;"></p>
 </body>
 
 </html>
